fixed top control bar alignment

--- a/app/(main)/@sidebar/Sidebar.module.scss
+++ b/app/(main)/@sidebar/Sidebar.module.scss
@@ -174,6 +174,7 @@
 // ========================================
 .topControlBar {
   display: flex;
+  justify-content: center;
   align-items: center;
   gap: 0.5rem;
   width: calc(100% - 0.5rem);
